--- a/01_modal/style.css
+++ b/01_modal/style.css
@@ -6,6 +6,43 @@
 
 .container {
   width: 90%;
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
+  padding: 60px 0;
+}
+
+.container p {
+  padding: 50px 0;
+}
+
+.dimm {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  display: none;
+}
+
+.modal {
+  max-width: 600px;
+  width: 90%;
+  background-color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 30px;
+  border-radius: 10px;
+  display: none;
+}
+
+.modal p {
+  padding: 30px 0;
+}
+
+button {
+  padding: 6px 16px;
+  cursor: pointer;
 }
